<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tag_submission_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/CountryID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_tagId"
            android:imeActionLabel="@string/action_sign_up_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="20dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_time"
            android:inputType="text|datetime"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="20dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/Location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_location"
            android:imeActionLabel="@string/action_sign_up_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/GearUsed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_gearUsed"
            android:imeActionLabel="@string/action_sign_up_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textAutoComplete"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/Comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_comments"
            android:imeActionLabel="@string/action_sign_up_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textMultiLine" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Take a photo..."
            android:id="@+id/textView4"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:src="@android:drawable/ic_menu_camera"
            android:id="@+id/PhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goToCamera"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView4" />


    </RelativeLayout>
    <ImageView
        android:id="@+id/FishPhoto"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:src="@drawable/placeholder"
        android:layout_gravity="center_horizontal" />

    <Button
        style="@style/ButtonTheme"
        android:id="@+id/SubmitForm"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="submitForm"
        android:text="Next"
        android:textSize="30dp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>